update property configuration